Fix misalignment of #nav-row

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -12,9 +12,6 @@
   background-size: cover; /* or contain depending on what you want */
   background-position: center center;
   background-repeat: no-repeat;
-  margin:auto;
-  margin-left: -12px; // to offset padding of parent container
-  padding: 0;
 }
 
 #logo{
